--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ nav a:hover{
 .dropdown {
   position: relative;
   display: inline-block;
+   
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -135,11 +136,23 @@ nav a:hover{
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-}
+  animation-duration: 0.2s;
+  animation-name: slidein;
 
+}
+@keyframes slidein {
+  from {
+    margin-top: -100px;
+    
+  }
+
+  to {
+   margin-top: 0;
+  }
+}
 /* Links inside the dropdown */
 .dropdown-content a {
-  /* color: black; */
+  
   padding: 12px 16px;
   text-decoration: none; 
   display: block;
@@ -151,8 +164,10 @@ nav a:hover{
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
- 
+  
 }
+
+
 
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
