--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@
 body{
     background-color: burlywood;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-      /* background-image: url("/images/fondo.jpg");
-      background-size: cover; */
 }
 
 /* Caja principal de tamaño 800pixeles */
@@ -14,7 +12,6 @@ body{
     background-color: rgb(129, 124, 56);
     background: linear-gradient(to right, rgb(129,124,56), rgb(129, 124, 100));
     padding-top: 0px;
-    /* padding: 25px; */
     width: 800px;  
     border-radius: 10px;
     box-sizing: border-box;
@@ -28,7 +25,7 @@ body{
 /* --------------------------------------- */
 nav {
     color: rgb(255, 255, 255);
-    font-weight: 800;
+    font-weight: 500;
     font-size: 18px;
     background-color: var(--MarronFav);
     text-align: center;
@@ -39,12 +36,17 @@ nav {
     box-sizing: border-box;
     height: 30px;
     border-radius: 10px 10px 0 0;
-    padding-top: 4px;
-    
+    padding-top: 4px; 
     padding-bottom: 4px;
-    border-bottom: 1px solid black;
-    
-    
+    border-bottom: 1px solid black; 
+    /* Gradient */
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#9e190f+0,600101+100 */
+background: #9e190f; /* Old browsers */
+background: -moz-linear-gradient(top,  #9e190f 0%, #600101 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #9e190f 0%,#600101 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #9e190f 0%,#600101 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e190f', endColorstr='#600101',GradientType=0 ); /* IE6-9 */
+
 }
 
 nav a{
@@ -72,10 +74,18 @@ nav a:hover{
     padding-right: 3px;
     border: 2px solid;
     border-color: black;
+    border-radius: 10px;
     /* Sombra de los botones */
     box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffb351+0,ea8520+100 */
+background: #ffb351; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffb351 0%, #ea8520 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ffb351 0%,#ea8520 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ffb351 0%,#ea8520 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb351', endColorstr='#ea8520',GradientType=0 ); /* IE6-9 */
+
 }
 
 .dropbtn{
@@ -84,21 +94,48 @@ nav a:hover{
 
 @media screen and (max-width: 799px){
 
+  /* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--MarronFav);
+  border: solid black 2px;
+  border-radius: 10px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  animation-duration: 0.2s;
+  animation-name: slidein;
+  background: #9e190f; /* Old browsers */
+background: -moz-linear-gradient(top,  #9e190f 0%, #600101 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #9e190f 0%,#600101 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #9e190f 0%,#600101 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e190f', endColorstr='#600101',GradientType=0 ); /* IE6-9 */
+
+}
+@keyframes slidein {
+  from {
+    margin-left: -100px;
+    
+  }
+
+  to {
+   margin-left: 0;
+  }
+}
+
 /* El contenido lo ajusto al 100% */
 #Contenido{
     width: 100%;
-
 }
+
 nav{
     text-align: left;
 }
 nav a:hover{
     padding: 5px;
     padding-left: 15px;
-    /* padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 3px;
-    padding-right: 3px; */
+    background-color: rgb(248, 175, 115);
     border: 2px solid;
     border-color: black;
     border-radius: 10px;
@@ -106,12 +143,13 @@ nav a:hover{
     box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 53px 0px rgba(0,0,0,0.75);
+
 }
+
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: transparent;
   color: white;
-  /* padding: 16px; */
   font-size: 20px;
   border: none;
   cursor: pointer;
@@ -126,40 +164,14 @@ nav a:hover{
    
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--MarronFav);
-  border: solid black 2px;
-  border-radius: 10px;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  animation-duration: 0.2s;
-  animation-name: slidein;
-
-}
-@keyframes slidein {
-  from {
-    margin-top: -100px;
-    
-  }
-
-  to {
-   margin-top: 0;
-  }
-}
 /* Links inside the dropdown */
 .dropdown-content a {
   
-  padding: 12px 16px;
+  padding: 14px 18px;
   text-decoration: none; 
   display: block;
 }
 
-/* Change color of dropdown links on hover */
-/* .dropdown-content a:hover {background-color: #f1f1f1} */
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
